Fix map legends (#4583)
* Fix map legends

* Fix missing scrollbar in map-legend

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2968,3 +2968,23 @@ div:hover::-webkit-scrollbar {
     width: 100%;
     height: 300px; /* You can adjust the height as needed */
 }
+
+.legend-row {
+    font-family: sans-serif;
+    font-size: 14px;
+}
+
+.legend-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 4px;
+}
+
+.legend-swatch {
+    width: 18px;
+    height: 18px;
+    margin-right: 6px;
+    border: 1px solid #00000033;
+    flex-shrink: 0;
+}
+
